fix horizontal scrolling bug

--- a/_compass/_partners.scss
+++ b/_compass/_partners.scss
@@ -9,6 +9,7 @@
     padding: 0;
     margin-left: -0.8em;
     margin-right: -0.8em;
+    overflow: hidden;
 
     @include display-flex(flex);
     @include flex-direction(row);
